# Nearest-Neighbour-Upscale

./: .gitignore  .gitmodules  Benchmark.c  CMakeLists.txt  DirectoryHandler.c  DirectoryHandler.h  LICENSE  MimallocOverrideCOnly.h  NNUMain.c  NearestNeighbourUpscale.c  NearestNeighbourUpscale.h  NearestNeighbourUpscaleDriver.c  NearestNeighbourUpscaleDriver.h  README.md  lodepng_mimalloc_adapter.c
.github/workflows/: cmake-build-action.yml
